# DejaView

./: .clang-tidy  .gitattributes  .gitignore  Android.bp  Android.bp.extras  BUILD  BUILD.extras  BUILD.gn  CHANGELOG  LICENSE  OWNERS  PRESUBMIT.py  PerfettoIntegrationTests.xml  README.chromium  README.md  TEST_MAPPING  TODO.md  WATCHLISTS  WORKSPACE  codereview.settings  dejaview.rc  meson.build  persistent_cfg.pbtxt
gn/: BUILD.gn  dejaview.gni  dejaview_benchmarks.gni  dejaview_cc_proto_descriptor.gni  dejaview_check_build_deps.gni  dejaview_component.gni  dejaview_fuzzers.gni  dejaview_host_executable.gni  dejaview_integrationtests.gni  dejaview_python.gni  dejaview_sql.gni  dejaview_tp_tables.gni  dejaview_unittests.gni  fuzzer.gni  gen_dejaview_version_header.gni  pkg_config.gni  proto_library.gni  test.gni  wasm.gni  write_buildflag_header.py
gn/standalone/: BUILD.gn  BUILDCONFIG.gn  fuzzer.gni  proto_library.gni
gn/standalone/sanitizers/: BUILD.gn  ignorelist.txt  sanitizers.gni
gn/standalone/toolchain/: BUILD.gn  msvc.gni
protos/dejaview/config/: BUILD.gn  data_source_config.proto  dejaview_config.proto  interceptor_config.proto  stress_test_config.proto  test_config.proto  trace_config.proto
python/: BUILD  BUILD.gn  README.md  example.py  setup.py
python/dejaview/batch_trace_processor/: __init__.py  api.py
python/dejaview/bigtrace/: api.py
python/dejaview/bigtrace_clickhouse/: bigtrace_output_schema.py  bigtrace_query.py  query_result_iterator.py
python/dejaview/common/: exceptions.py  query_result_iterator.py  repo_utils.py
python/dejaview/prebuilts/: dejaview_prebuilts.py
python/dejaview/trace_processor/: __init__.py  api.py  http.py  metrics.descriptor  metrics.descriptor.sha1  platform.py  protos.py  shell.py  trace_processor.descriptor
python/dejaview/trace_uri_resolver/: path.py  registry.py  resolver.py
python/generators/diff_tests/: runner.py  utils.py
python/generators/sql_processing/: docs_parse.py  utils.py
python/generators/trace_processor_table/: serialize.py
python/test/: api_integrationtest.py  bigtrace_api_integrationtest.py  bigtrace_gcs_manualtest.py  query_result_iterator_unittest.py  resolver_unittest.py  stdlib_unittest.py
python/tools/: batch_trace_processor_shell.py  check_imports.py  cpu_profile.py  heap_profile.py  install_test_reporter_app.py  record_android_trace.py  slice_breakdown.py  trace_processor.py  tracebox.py  traceconv.py  update_permalink.py
src/dejaview_cmd/: BUILD.gn  bugreport_path.h  config.cc  config.h  config_unittest.cc  dejaview_cmd.cc  dejaview_cmd.h  dejaview_cmd_android.cc  dejaview_cmd_state.proto  main.cc  packet_writer.cc  packet_writer.h  packet_writer_unittest.cc  pbtxt_to_pb.cc  pbtxt_to_pb.h  pbtxt_to_pb_unittest.cc  rate_limiter.cc  rate_limiter.h  rate_limiter_unittest.cc  trigger_dejaview.cc  trigger_dejaview_main.cc  trigger_producer.cc  trigger_producer.h
src/trace_processor/: BUILD.gn  demangle.cc  export_json.cc  export_json.h  export_json_unittest.cc  forwarding_trace_parser.cc  forwarding_trace_parser.h  forwarding_trace_parser_unittest.cc  iterator_impl.cc  iterator_impl.h  minimal_shell.cc  read_trace.cc  read_trace_integrationtest.cc  read_trace_internal.cc  read_trace_internal.h  ref_counted_unittest.cc  storage_minimal_smoke_test.cc  tp_metatrace.cc  tp_metatrace.h  trace_blob.cc  trace_blob_unittest.cc  trace_database_integrationtest.cc  trace_parsing_fuzzer.cc  trace_processor.cc  trace_processor_context.cc  trace_processor_impl.cc  trace_processor_impl.h  trace_processor_shell.cc  trace_processor_storage.cc  trace_processor_storage_impl.cc  trace_processor_storage_impl.h  trace_reader_registry.cc  trace_reader_registry.h  virtual_destructors.cc
src/trace_processor/containers/: BUILD.gn  bit_vector.cc  bit_vector.h  bit_vector_benchmark.cc  bit_vector_unittest.cc  implicit_segment_forest.h  implicit_segment_forest_unittest.cc  interval_intersector.h  interval_intersector_unittest.cc  interval_tree.h  interval_tree_unittest.cc  null_term_string_view.h  row_map.cc  row_map.h  (+8 more)
src/traceconv/: BUILD.gn  deobfuscate_profile.cc  deobfuscate_profile.h  lite_fallbacks.cc  main.cc  pprof_builder.cc  pprof_reader.cc  pprof_reader.h  proto_full_utils.cc  proto_full_utils.h  symbolize_profile.cc  symbolize_profile.h  trace_to_firefox.cc  trace_to_firefox.h  trace_to_hprof.cc  trace_to_hprof.h  trace_to_json.cc  trace_to_json.h  trace_to_pprof_integrationtest.cc  trace_to_profile.cc  trace_to_profile.h  trace_to_systrace.cc  trace_to_systrace.h  trace_to_text.cc  trace_to_text.h  trace_to_text_integrationtest.cc  trace_unpack.cc  trace_unpack.h  utils.cc  utils.h
src/traced_relay/: BUILD.gn  relay_service.cc  relay_service.h  relay_service_integrationtest.cc  relay_service_main.cc  relay_service_unittest.cc  socket_relay_handler.cc  socket_relay_handler.h  socket_relay_handler_unittest.cc
test/: BUILD.gn  android_integrationtest.cc  android_test_utils.cc  android_test_utils.h  client_api_example.cc  cmdline_integrationtest.cc  end_to_end_benchmark.cc  end_to_end_shared_memory_fuzzer.cc  fake_producer.cc  fake_producer.h  ftrace_integrationtest.cc  gtest_and_gmock.h  gtest_logcat_printer.cc  integrationtest_initializer.h  integrationtest_main.cc  producer_socket_fuzzer.cc  synth_common.py  test_helper.cc  test_helper.h  trace_processor_shell_integrationtest.cc  traced_integrationtest.cc
test/ci/: android_tests.sh  bazel_tests.sh  common.sh  fuzzer_tests.sh  linux_tests.sh  ui_tests.sh
test/configs/: BUILD.gn  README.md  ftrace.cfg  ftrace_largebuffer.cfg  ftrace_with_ksyms.cfg  mm_events.cfg  summary.cfg
test/cts/: Android.bp  AndroidTest.xml  BUILD.gn  README.md  dejaview_device_preparer.sh  device_feature_test_cts.cc  heapprofd_java_test_cts.cc  heapprofd_test_cts.cc  producer_to_consumer_integrationtest_cts.cc  traced_perf_test_cts.cc
test/sanitizers/: sanitizers_unittest.cc
test/stress_test/: BUILD.gn  README.md  gen_configs_blob.py  stress_producer.cc  stress_test.cc
test/vts/: Android.bp  AndroidTest.xml  BUILD.gn  vendor_dejaview_atrace_test.cc
(+3119 files in other folders)
